--- a/tmux.conf
+++ b/tmux.conf
@@ -8,13 +8,11 @@ set -g default-terminal "screen-256color"
 set -g history-limit 5000
 
 # use vim key bindings
-set -g mode-keys vi
+# set -g modes vi
 
 # disable mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
 
 # decrease command delay (increases vim responsiveness)
 set -sg escape-time 0
@@ -39,16 +37,13 @@ set -g visual-activity on
 #  Key Bindings
 ###########################
 # tmux prefix
-#unbind C-b
-#unbind C-a
-#set -g prefix C-b
-unbind-key C-b
-set -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+unbind g
+set -g prefix 'C-g'
+bind 'C-g' send-prefix
 
 # window splitting
-#unbind %
-bind | split-window -h -c "#{pane_current_path}"
+unbind %
+bind % split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
@@ -74,18 +69,18 @@ bind l select-pane -R
 
 # Copy and pasting, for reattach-to-user-namespace, do brew install reattach-to-user-namespace
 bind Escape copy-mode
-bind C-u copy-mode
+bind 'C-u' copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection 
+bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe, see note above on brew install reattach-to-user-namespace
 unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Quick window selection
-bind -r C-h select-window -t :- 
+bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 ###########################
@@ -107,7 +102,7 @@ set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
 
 # show hostname, date, time, and battery in right status bar
 set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M'
- 
+
 # dynamically update iTerm tab and window titles
 set -g set-titles on
 
@@ -141,5 +136,36 @@ set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
 
+###########################
+# Commands
+###########################
+
 bind P pipe-pane -o "cat >> ~/#W.log" \; display "Toggled logging to ~/#W.log"
 
+# Bind manpage shortcut
+bind / command-prompt "split-window 'exec man %%'"
+
+# Bind SSH shortcut
+bind-key S command-prompt "new-window -n %1 'ssh %1'"
+
+
+# set mouse on with prefix m
+bind m \
+    set -g mouse on \;\
+    set -g mouse-utf8 on \;\
+    display 'Mouse: ON'
+# set mouse off with prefix M
+bind M \
+    set -g mouse off \;\
+    set -g mouse-utf8 off \;\
+    display 'Mouse: OFF'
+# zoom this pane to full screen
+bind + \
+    new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+    swap-pane -s tmux-zoom.0 \;\
+    select-window -t tmux-zoom
+# restore this pane
+bind - \
+    last-window \;\
+    swap-pane -s tmux-zoom.0 \;\
+    kill-window -t tmux-zoom
