--- a/tmux.conf
+++ b/tmux.conf
@@ -98,10 +98,10 @@ set -g status-justify left
 
 # show session, window, pane in left status bar
 set -g status-left-length 40
-set -g status-left '#[fg=green]#S#[fg=blue] #I:#P#[default]'
+set -g status-left '#[fg=colour45,bg=colour32] Session #S #[fg=colour239,bg=default] Window #I:#P #[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[fg=green]#H#[default] %m/%d/%y %I:%M'
+set-option -g status-right '#[bg=colour45,fg=colour239,bold]#H #[bg=colour45,fg=colour255,nobold]%m/%d/%y #[bg=colour45,fg=colour239]%I:%M'
 
 # dynamically update iTerm tab and window titles
 set -g set-titles on
@@ -116,24 +116,31 @@ set -w -g automatic-rename off
 # (would love to include #(pwd) here as well, but that would only print the
 # current working directory relative to the session -- ie. always the starting
 # cwd -- which is not very interesting)
-set -g set-titles-string "#T : #h > #S > #W"
+set -g set-titles-string " #T : #h > #S > #W "
 
 ###########################
 # Colors
 ###########################
 
 # color status bar
-set -g status-bg colour235
-set -g status-fg white
+set -g status-bg colour45
+set -g status-fg colour135
 
 # highlight current window
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg green
+set-window-option -g window-status-current-bg colour208
+set-window-option -g window-status-current-fg colour255
+set-window-option -g window-status-current-attr bold
+
+set -g message-bg colour156
+set -g message-fg colour245
+set -g message-attr bold
 
 # set color of active pane
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-set -g pane-active-border-fg green
+#set -g pane-border-fg colour32
+#set -g pane-border-bg colour45
+set -g pane-border-fg colour45
+set -g pane-border-bg colour32
+set -g pane-active-border-fg colour249
 set -g pane-active-border-bg black
 
 ###########################
