adding new tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,7 +59,7 @@ bind t split-window -p 25
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf!"
 
 # moving between panes
 bind h select-pane -L
@@ -124,20 +124,18 @@ set -g set-titles-string " #T : #h > #S > #W "
 
 # color status bar
 set -g status-bg colour45
-set -g status-fg colour135
+set -g status-fg colour255
 
 # highlight current window
-set-window-option -g window-status-current-bg colour208
-set-window-option -g window-status-current-fg colour255
-set-window-option -g window-status-current-attr bold
+set-window-option -g window-status-current-bg colour156
+set-window-option -g window-status-current-fg colour239
+set-window-option -g window-status-current-attr bold,italic
 
-set -g message-bg colour156
-set -g message-fg colour245
+set -g message-bg colour208
+set -g message-fg colour255
 set -g message-attr bold
 
 # set color of active pane
-#set -g pane-border-fg colour32
-#set -g pane-border-bg colour45
 set -g pane-border-fg colour45
 set -g pane-border-bg colour32
 set -g pane-active-border-fg colour249
