more tmux please

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 set -g history-limit 5000
 
 # use vim key bindings
-# set -g modes vi
+set -g modes vi
 
 # disable mouse
 set -g mouse-utf8 on
@@ -68,16 +68,28 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Copy and pasting, for reattach-to-user-namespace, do brew install reattach-to-user-namespace
-bind Escape copy-mode
-bind 'C-u' copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+bind Escape begin-selection
 
-# Update default binding of `Enter` to also use copy-pipe, see note above on brew install reattach-to-user-namespace
+# Copy-paste integration
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+unbind c
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy c copy-pipe "reattach-to-user-namespace pbcopy"
+
+# New window
+unbind n
+bind n new-window -c "#{pane_current_path}"
+
+# Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Bind ']' to use pbpaste
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 
 # Quick window selection
 bind -r C-h select-window -t :-
@@ -101,13 +113,13 @@ set -g status-left-length 40
 set -g status-left '#[fg=colour45,bg=colour32] Session #S #[fg=colour239,bg=default] Window #I:#P #[default]'
 
 # show hostname, date, time, and battery in right status bar
-set-option -g status-right '#[bg=colour45,fg=colour239,bold]#H #[bg=colour45,fg=colour255,nobold]%m/%d/%y #[bg=colour45,fg=colour239]%I:%M'
+set-option -g status-right '#[bg=colour45,fg=colour239,bold]#H #[bg=colour45,fg=colour255,nobold]%m/%d/%y #[bg=colour45,fg=colour239]%I:%M '
 
 # dynamically update iTerm tab and window titles
 set -g set-titles on
 
 # but don't change tmux's own window titles
-set -w -g automatic-rename off
+# set -w -g automatic-rename off
 
 # #T      = standard window title (last command, see ~/.bash_profile)
 # #h      = short hostname
@@ -129,17 +141,17 @@ set -g status-fg colour255
 # highlight current window
 set-window-option -g window-status-current-bg colour156
 set-window-option -g window-status-current-fg colour239
-set-window-option -g window-status-current-attr bold,italic
+set-window-option -g window-status-current-attr bold
 
 set -g message-bg colour208
 set -g message-fg colour255
 set -g message-attr bold
 
 # set color of active pane
-set -g pane-border-fg colour45
-set -g pane-border-bg colour32
-set -g pane-active-border-fg colour249
-set -g pane-active-border-bg black
+set -g pane-border-bg black
+set -g pane-border-fg colour249
+set -g pane-active-border-bg colour32
+set -g pane-active-border-fg colour45
 
 ###########################
 # Commands
@@ -152,7 +164,6 @@ bind / command-prompt "split-window 'exec man %%'"
 
 # Bind SSH shortcut
 bind-key S command-prompt "new-window -n %1 'ssh %1'"
-
 
 # set mouse on with prefix m
 bind m \
