update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ set -g default-terminal "screen-256color"
 set -g history-limit 5000
 
 # use vim key bindings
-set -g modes vi
+# set -g vi-modes on
 
 # disable mouse
 set -g mouse-utf8 on
@@ -67,9 +67,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Copy and pasting, for reattach-to-user-namespace, do brew install reattach-to-user-namespace
-bind Escape begin-selection
-
 # Copy-paste integration
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -77,6 +74,7 @@ setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
 unbind c
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy Escape begin-selection
 bind-key -t vi-copy c copy-pipe "reattach-to-user-namespace pbcopy"
 
 # New window
@@ -185,3 +183,5 @@ bind - \
     last-window \;\
     swap-pane -s tmux-zoom.0 \;\
     kill-window -t tmux-zoom
+
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
